# Tier4Graph

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  railway.json
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: neo4j.py  schema.py
backend/app/models/: __init__.py  certification.py  client.py  constraint.py  facility.py  matching.py  project.py  service.py  vendor.py
backend/app/repositories/: __init__.py  certification_repository.py  facility_repository.py  service_repository.py  vendor_repository.py
backend/app/routers/: admin.py  health.py  ingestion.py  match.py  vendor.py
backend/app/services/: matching_service.py  nl_parser_service.py
backend/data/: __init__.py  vendors_full_research.json  vendors_seed.json
backend/scripts/: cleanup_mock_data.py  seed_vendors.py  seed_vendors_research.py
docs/: AI_DEVELOPER_GUIDE.md  ARCHITECTURE.md  BOILERPLATE_CUSTOMIZATION.md  CONTRIBUTING.md  DEV_CONTEXT.md  DEV_WARNINGS.md  ENGINEERING_LOG.md  NEO4J_SETUP_AND_MCP.md  ONTOLOGY.md  README.md  REPO_STRUCTURE.md  SYSTEM_DIAGRAM.md  TASK_FLOW.md
frontend/: README.md  package-lock.json  package.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/match-demo/: page.tsx  types.ts
